# mlops_guild

./: .gitignore  docker-compose.yml  test_mlflow_connection.py
pipelines/ct/: Dockerfile.kedro  README.md  pyproject.toml  requirements.txt
pipelines/ct/conf/: logging.yml
pipelines/ct/conf/base/: catalog.yml  parameters.yml  parameters_data_pipeline.yml  parameters_model_pipeline.yml
pipelines/ct/docs/source/: conf.py  index.rst
pipelines/ct/src/ct/: __init__.py  __main__.py  settings.py
pipelines/ct/src/ct/pipelines/data_pipeline/: __init__.py  nodes.py  pipeline.py
pipelines/ct/src/ct/pipelines/model_pipeline/: __init__.py  nodes.py  pipeline.py
pipelines/ct/tests/pipelines/model_pipeline/: test_pipeline.py
pipelines/kedro_project/: README.md  pyproject.toml  requirements.txt
pipelines/kedro_project/conf/: logging.yml
pipelines/kedro_project/conf/base/: catalog.yml  parameters.yml  parameters_data_pipeline.yml
pipelines/kedro_project/src/kedro_project/: __main__.py  settings.py
pipelines/kedro_project/src/kedro_project/pipelines/data_pipeline/: nodes.py  pipeline.py
pipelines/kedro_project/src/kedro_project/pipelines/model_pipeline/: nodes.py  pipeline.py
pipelines/kedro_project/tests/pipelines/data_pipeline/: test_pipeline.py
